--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-server-app",
+  "name": "nest-postgress-server-app",
   "version": "0.0.1",
   "description": "",
   "author": "justchola",
